--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ h2 {
   justify-content: center;
 }
 .dice {
-  object-fit: cover;
+  object-fit: contain;
   max-width: 100%;
   max-height: 100%;
 }
